--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,11 +61,13 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     implementation 'androidx.room:room-runtime:2.4.3'
+    implementation 'com.google.android.gms:play-services-fido:19.0.1'
     kapt 'androidx.room:room-compiler:2.4.3'
     implementation platform("com.google.firebase:firebase-bom:30.3.2")
     implementation "com.google.firebase:firebase-messaging-ktx"
     implementation  'com.google.gms:google-services:4.3.13'
     implementation "com.squareup.okhttp3:okhttp:4.9.1"
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
