--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "ru.netology.nmedia"
         minSdk 22
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -51,30 +51,32 @@ android {
 
 dependencies {
 
-    implementation 'androidx.activity:activity-ktx:1.5.1'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.activity:activity-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation "com.google.android.material:material:1.6.1"
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation "com.google.android.material:material:1.8.0"
     implementation "com.google.code.gson:gson:2.9.1"
-    implementation "androidx.fragment:fragment-ktx:1.5.3"
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
-    implementation 'androidx.room:room-runtime:2.4.3'
+    implementation "androidx.fragment:fragment-ktx:1.5.6"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.room:room-runtime:2.5.1'
+    implementation "androidx.room:room-ktx:2.5.1"
     implementation 'com.google.android.gms:play-services-fido:19.0.1'
-    kapt 'androidx.room:room-compiler:2.5.0'
+    kapt 'androidx.room:room-compiler:2.5.1'
     implementation platform("com.google.firebase:firebase-bom:30.3.2")
     implementation "com.google.firebase:firebase-messaging-ktx"
-    implementation  'com.google.gms:google-services:4.3.13'
+    implementation  'com.google.gms:google-services:4.3.15'
     implementation "com.squareup.okhttp3:okhttp:4.9.1"
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:3.9.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
