--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.5.1'
     implementation platform("com.google.firebase:firebase-bom:30.3.2")
     implementation "com.google.firebase:firebase-messaging-ktx"
+    implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation  'com.google.gms:google-services:4.3.15'
     implementation "com.squareup.okhttp3:okhttp:4.11.0"
     implementation 'com.github.bumptech.glide:glide:4.14.2'
@@ -78,6 +79,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.1"
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
+    implementation "com.github.dhaval2404:imagepicker:2.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
