--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.kapt'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdk 33
@@ -85,6 +85,8 @@ dependencies {
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
     implementation "com.github.dhaval2404:imagepicker:2.1"
+    implementation "com.google.dagger:hilt-android:2.47"
+    kapt "com.google.dagger:hilt-compiler:2.47"
 
 
     testImplementation 'junit:junit:4.13.2'
