--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation "com.github.dhaval2404:imagepicker:2.1"
     implementation "com.google.dagger:hilt-android:2.47"
     kapt "com.google.dagger:hilt-compiler:2.47"
+    implementation "androidx.paging:paging-runtime-ktx:3.2.0"
 
 
     testImplementation 'junit:junit:4.13.2'
