--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.47"
     kapt "com.google.dagger:hilt-compiler:2.47"
     implementation "androidx.paging:paging-runtime-ktx:3.2.0"
+    implementation "androidx.room:room-paging:2.5.2"
 
 
     testImplementation 'junit:junit:4.13.2'
